# BrowserChatGPT

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
apps/: chat_app.py  client.py  llm_api.py  server.py  streamlit_app.py
browserchatgpt/: browserchatgpt.py  parallel.py  web_cache.py  web_database.py  web_llm.py  web_scraper.py  web_scraper_concurrent.py  web_scraper_parallel.py  web_vector_store.py  web_vectorstore.py
chrome-extension/: background.js  browserchatgpt.html  browserchatgpt.js  index.html  manifest.json  script.js  style.css
chrome-extension-grieco/: content.js
src/: browser_llm.py  web_data.py  web_scraper.py
tests/: test_vector_store.py  test_web_llm.py  test_web_scraper.py  test_web_scraper_concurrent.py  test_web_scraper_timing.py
