[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "browserchatgpt"
version = "0.0.1"

dependencies = [
    "faiss-cpu == 1.7.4",
    "html2text == 2020.1.16",
    "langchain == 0.0.310",
    "openai == 0.28.1", 
    "PyQt5 == 5.15.10",
    "selenium == 4.13.0",
    "tiktoken == 0.5.1",
    "urllib3 == 2.0.6",
    "Flask == 3.0.0",
    "gevent == 23.9.1",
    "validators"
]

[tool.setuptools.packages.find]
include = ["browserchatgpt"]


[tool.black]
line-length = 89

[tool.flake8]
max-line-length = 89